fix prepare query & login-password settings to internal Rest application